# claude-code-sync

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  EXAMPLES.md  FINAL_SUMMARY.md  GIT_SETUP.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TEST_COVERAGE.md  crates.js  help.html  index.html  mise.toml  release-please-config.json  renovate.json  search-index.js  settings.html  src-files.js  test_status.rs
.github/workflows/: build.yml  ci.yml  docs.yml  integration-tests.yml  release-new.yml  release.yml  renovate.yml  unit-tests.yml
claude_code_sync/: all.html  enum.VerbosityLevel.html  index.html  sidebar-items.js
claude_code_sync/artifacts/: index.html  sidebar-items.js
claude_code_sync/config/: index.html  sidebar-items.js  struct.ConfigManager.html
claude_code_sync/conflict/: enum.ConflictResolution.html  index.html  sidebar-items.js  struct.Conflict.html  struct.ConflictDetector.html
claude_code_sync/filter/: fn.show_config.html  fn.update_config.html  (+3 more)
docs/: EXAMPLES.md  GIT_SETUP.md  MERCURIAL_SETUP.md
search.index/: 002f8157ee60.js  0030ced815e3.js  00852bea2874.js  008fec665750.js  00ef88605a57.js  00f421afb2ad.js  01ae4ec7f2ec.js  01ea2cb59605.js  02202495abbd.js  025d2fe989.js  02aa458b25c2.js  03af5ef364c6.js  0450c120bb37.js  04fc5abd75bb.js  0576d96f78.js  06fdab2e32.js  06ff909afd32.js  079827cced4b.js  07c2fd31bc.js  087bca3fed25.js  088c2b7b3c61.js  0955213f86.js  095a8b8b3046.js  09fee65d5f4b.js  0a3a3faa79.js  0aa3d0d7826f.js  0ab37bad412c.js  0ad81df30b79.js  0ae04115652d.js  0b6e62fc00b4.js  0b8e087488.js  0bd06bbb2f7b.js  0c4130fb5a71.js  0c4524e1de7b.js  0c5bf8fd669c.js  0d0120a9c85f.js  0d041275bc07.js  0d870ac035.js  0da48456dcbc.js  0dad632f7ed7.js  (+385 more)
src/: config.rs  conflict.rs  filter.rs  git.rs  history.rs  interactive_conflict.rs  lib.rs  logger.rs  main.rs  merge.rs  onboarding.rs  parser.rs  report.rs  sync.rs  undo.rs
tests/: README.md  integration_sync_tests.rs  integration_tests.rs  scm_backend_tests.rs  test_artifact_config.rs  test_artifact_e2e.rs  test_artifact_sync.rs  test_config_state.rs  test_differential_snapshots.rs  test_interactive_handlers.rs  test_multi_repo.rs  test_onboarding.rs  test_push_plan.rs  test_settings_merge.rs  test_smart_merge.rs  test_sync_verbosity.rs
(+376 files in other folders)
