[package]
name = "claude-code-sync"
version = "0.1.1"
edition = "2021"
authors = ["Claude Code User"]
description = "Sync Claude Code conversation history with git repositories"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
git2 = "0.19"
toml = "0.8"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
colored = "2.1"
dirs = "5.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
base64 = "0.22"
inquire = "0.7"
log = "0.4"
env_logger = "0.11"
atty = "0.2"

[dev-dependencies]
tempfile = "3.10"
walkdir = "2.5"
serde_json = "1.0"
